@@ -3,6 +3,7 @@ Auto IRC Bot 3.0: Change Log
 
 3.0 Indev
 ===============================================================================
+    * Werewolf: Dynamic lynch and no victim messages.
     * Werewolf 1.05: Added WAIT command.
     * Werewolf: Improved STATS to be smart.
     * Werewolf 1.04: Added village drunks and fixed other issues.
